--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
         <script src="./js/script.js"></script>
     </head>
     <body>
-        
+        <div id="content" class="container">
+            <div id="options" class="container">
+
+            </div>
+            <div id="display" class="container">
+                <div class="container">
+                    <h1>Etch-a-sketch</h1>
+                </div>
+                <div id="grid" class="container"></div>
+            </div>
+        </div>
+        <div id="footer" class="container">
+
+        </div>
     </body>
 </html>
