Add function to create grid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="./style.css">
-        <script src="./js/script.js"></script>
+        <script src="./js/script.js" defer></script>
     </head>
     <body>
         <div id="content" class="container">
@@ -18,11 +18,11 @@
                 <div class="container">
                     <h1>Etch-a-sketch</h1>
                 </div>
-                <div id="grid" class="container"></div>
+                <div id="grid"></div>
             </div>
         </div>
         <div id="footer" class="container">
-
+            
         </div>
     </body>
 </html>
