--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
         <link rel="stylesheet" href="./style.css">
         <script src="./js/script.js" defer></script>
     </head>
-    <body>
+    <body class="container">
         <div id="content" class="container">
             <div id="options" class="container">
-                
+
             </div>
             <div id="display" class="container">
                 <div class="container">
                     <h1>Etch-a-sketch</h1>
                 </div>
-                <div id="grid" class="container"></div>
             </div>
         </div>
         <div id="footer" class="container">
-
+            <p>Copyright © Roger</p>
         </div>
     </body>
 </html>
