Change style and add media querys for grid to make it responsive

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
         <script src="./js/script.js" defer></script>
     </head>
     <body class="container">
+        <div id="header" class="container">
+            <h1>Etch-a-sketch</h1>
+        </div>
         <div id="content" class="container">
             <div id="options" class="container">
 
             </div>
-            <div id="display" class="container">
-                <div class="container">
-                    <h1>Etch-a-sketch</h1>
-                </div>
-            </div>
+
         </div>
         <div id="footer" class="container">
             <p>Copyright © Roger</p>
