Add slider and function to update it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </div>
         <div id="content" class="container">
             <div id="options" class="container">
-
+                <div class="slidecontainer">
+                    <p><output id="value"></output></p>
+                    <input type="range" min="1" max="64" value="16" id="slider">
+                </div>
             </div>
 
         </div>
