--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div id="content" class="container">
             <div id="options" class="container">
+                <input type="color" value="#000000" id="colour"> 
                 <div class="slidecontainer">
                     <p><output id="value"></output></p>
                     <input type="range" min="1" max="64" value="16" id="slider">
