--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
         </div>
         <div id="content" class="container">
             <div id="options" class="container">
-                <input type="color" value="#000000" id="colour"> 
-                <div class="slidecontainer">
-                    <p><output id="value"></output></p>
+                <div class="container">
+                    <label for="colour">Colour</label>
+                    <input type="color" value="#000000" id="colour"> 
+                </div>
+                <div class="container">
+                    <label for="background">Background</label>
+                    <input type="color" value="#FFFFFF" id="background"> 
+                </div>
+                <div class="container">
+                    <label for="slider"><output id="value"></output></label>
                     <input type="range" min="1" max="64" value="16" id="slider">
                 </div>
             </div>
