Add button to clear grid

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <div id="options" class="container">
                 <div class="container">
                     <label for="colour">Colour</label>
-                    <input type="color" value="#000000" id="colour"> 
+                    <input type="color" value="#00003b" id="colour"> 
                 </div>
                 <div class="container">
                     <label for="background">Background</label>
-                    <input type="color" value="#FFFFFF" id="background"> 
+                    <input type="color" value="#7fffd4" id="background"> 
                 </div>
                 <div class="container">
                     <label for="slider"><output id="value"></output></label>
                     <input type="range" min="1" max="64" value="16" id="slider">
                 </div>
+                <button id="clear">Clear</button>
             </div>
-
         </div>
         <div id="footer" class="container">
             <p>Copyright © Roger</p>
