Add draw, eraser and rgb buttons and reorder the lineup of options

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
                     <label for="background">Background</label>
                     <input type="color" value="#7fffd4" id="background"> 
                 </div>
+                <button id="draw">Draw</button>
+                <button id="rgb">RGB</button>
+                <button id="eraser">Eraser</button>
+                <button id="clear">Clear</button>
                 <div class="container">
                     <label for="slider"><output id="value"></output></label>
                     <input type="range" min="1" max="64" value="16" id="slider">
                 </div>
-                <button id="clear">Clear</button>
             </div>
         </div>
         <div id="footer" class="container">
