--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Etch-a-Sketch</title>
+        <title>Drawit</title>
+        <link rel="icon" href="./icon.png">
         <link rel="stylesheet" href="./style.css">
         <script src="./js/script.js" defer></script>
     </head>
     <body class="container">
         <div id="header" class="container">
-            <h1>Etch-a-sketch</h1>
+            <h1>Drawit</h1>
         </div>
         <div id="content" class="container">
             <div id="options" class="container">
